--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,12 +7,15 @@ on:
     branches: [ main, master ]
 
 env:
-  # Регистр Docker Hub
+  # Docker Hub Registry
   REGISTRY: docker.io
-  # Имя образа (замените на ваше имя пользователя Docker Hub)
-  IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/service-system
+  # Image name for DockerHub: dmitriier/dev_ops_pr
+  IMAGE_NAME: dmitriier/dev_ops_pr
 
 jobs:
+  # ============================================
+  # Job 1: Build and Push to DockerHub
+  # ============================================
   build-and-push:
     runs-on: ubuntu-latest
     permissions:
@@ -69,4 +72,63 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: 'trivy-results.sarif'
+
+  # ============================================
+  # Job 2: CI Verification with docker-compose
+  # ============================================
+  ci-verification:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    if: github.event_name == 'pull_request'
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build application with docker-compose
+        run: |
+          docker-compose build service-system
+
+      - name: Start services with docker-compose
+        run: |
+          docker-compose up -d db service-system
+          sleep 30
+
+      - name: Wait for database to be ready
+        run: |
+          until docker-compose exec -T db pg_isready -U postgres -d car_service_db; do
+            echo "Waiting for database..."
+            sleep 2
+          done
+          echo "Database is ready!"
+
+      - name: Check application health
+        run: |
+          echo "Checking application health..."
+          sleep 10
+          curl -f http://localhost:18080/metrics || exit 1
+          echo "Application is healthy!"
+
+      - name: Verify API endpoints
+        run: |
+          echo "Testing API endpoints..."
+          # Test metrics endpoint
+          curl -s http://localhost:18080/metrics | grep -q "service_system" && echo "✓ Metrics endpoint works"
+          
+          # Test main page
+          curl -s -o /dev/null -w "%{http_code}" http://localhost:18080/ | grep -q "200" && echo "✓ Main endpoint works"
+
+      - name: Show logs on failure
+        if: failure()
+        run: |
+          echo "=== Application Logs ==="
+          docker-compose logs service-system
+
+      - name: Cleanup
+        run: |
+          docker-compose down -v
+          echo "Cleanup complete!"
 
